[gd_scene load_steps=29 format=4 uid="uid://bj3qcibeaijal"]

[ext_resource type="Script" uid="uid://by64cr6q7hf2q" path="res://scenes/enemies/wip_enemy/wip_enemy.gd" id="1_5383a"]
[ext_resource type="Script" uid="uid://dd1ahw456m2p2" path="res://scenes/enemies/wip_enemy/state/wip_enemy_state_machine.gd" id="2_f2tsk"]
[ext_resource type="Script" uid="uid://djmgg55800hfb" path="res://scenes/enemies/wip_enemy/state/idle.gd" id="3_sv2x5"]
[ext_resource type="Script" uid="uid://d0wgto7u87a5y" path="res://scenes/enemies/wip_enemy/state/alerted.gd" id="4_gbuk4"]
[ext_resource type="Script" uid="uid://q4d5r8wjofkb" path="res://scenes/enemies/wip_enemy/state/step.gd" id="5_f2tsk"]
[ext_resource type="Script" uid="uid://cgnkmidxm3pke" path="res://scenes/enemies/wip_enemy/state/attack_1.gd" id="6_3w1av"]
[ext_resource type="Script" uid="uid://b2g37xv5lcnch" path="res://scenes/enemies/wip_enemy/state/pause.gd" id="6_kp0d4"]
[ext_resource type="Script" uid="uid://blboaxbckdrdv" path="res://scenes/enemies/wip_enemy/state/pre_attack.gd" id="7_htmdt"]
[ext_resource type="Script" uid="uid://cvlqir8ougg5u" path="res://scenes/enemies/wip_enemy/state/attack_2.gd" id="7_kp0d4"]
[ext_resource type="Script" uid="uid://cghb616o3t5ul" path="res://scenes/enemies/wip_enemy/state/dash.gd" id="8_s18xg"]
[ext_resource type="Script" uid="uid://iqp2wfs8mglu" path="res://scenes/enemies/wip_enemy/state/post_attack.gd" id="10_1fnqe"]
[ext_resource type="Script" uid="uid://bvtthbae21ewf" path="res://scenes/enemies/wip_enemy/state/death.gd" id="10_kp0d4"]
[ext_resource type="Script" uid="uid://g846fox2vs24" path="res://scenes/enemies/wip_enemy/state/fall.gd" id="11_s18xg"]
[ext_resource type="PackedScene" uid="uid://3tvie3ok2fau" path="res://scenes/hurtbox/hurtbox.tscn" id="12_037im"]
[ext_resource type="PackedScene" uid="uid://bediyvecmero2" path="res://scenes/hitbox/hitbox.tscn" id="14_cc55l"]
[ext_resource type="Script" uid="uid://dfwil651t71we" path="res://scenes/enemies/wip_enemy/state/bide.gd" id="14_ssfqn"]

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_ssfqn"]
_data = PackedByteArray("AAADAAUAAAABAAAAwAAAAIAAAACQAQAAUklGRogBAABXRUJQVlA4THwBAAAvv8AfED+gOJIMaNftpaQmc9kpZiQJzo3EKTAA+1yFbdu2qeydtPMfAACglzXdXNtv5+f3Aa4j2aqjucb0Hplidrqra73YcKT3BZvzi8nS+X/z8T3LFNF/B24jKZKXOXvwCfw8HO6+POHjs/HmYX1XbEvmhr4r8pKZG/qu2EjfFXmbiK7QFXUgolGm74opHwxHo4hdrSuQ+WhUi9a1POCUS5GRxOta0gjw9zpLEZF2tC6mUU3aWlu1rU53WEr6rNRlrS5fQeg4hZvNitkjUtdyZ7RX9+5iWZb1meGg7rocHYJiCOEpy7JoXcxUCj+EoBNCHdG6llyIdBPDsMxFVqYBki6UbkOAQ8yunLXcwX59l3JIVP87f7Rf26XVAryzTdXm1M0O5od//31+tIxbHnCWUQn4e8O2NK9J2zKWYSnps2Xb+V7oOKtHeFCM9ureGbXt0iG7G0yl8EMIgNnNQqSbGIZlLrIyDZB0YVzOB2wPSeg421qAd9bB4/fQAA==")
size_override = Vector2(192, 128)

[sub_resource type="Animation" id="Animation_ssfqn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s24oj"]
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_wixr1"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_cc55l"]
resource_name = "fall"
length = 0.751
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 0.751),
"transitions": PackedFloat32Array(2, 1, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, 172), Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_1fnqe"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sfiqa"]
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1fnqe"]
_data = {
&"RESET": SubResource("Animation_ssfqn"),
&"alerted": SubResource("Animation_s24oj"),
&"death": SubResource("Animation_wixr1"),
&"fall": SubResource("Animation_cc55l"),
&"idle": SubResource("Animation_1fnqe"),
&"step": SubResource("Animation_sfiqa")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kp0d4"]
radius = 2.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_htmdt"]
radius = 5.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_037im"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ssfqn"]
radius = 4.0

[node name="WipEnemy" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 129
platform_floor_layers = 4278190080
script = ExtResource("1_5383a")
metadata/_custom_type_script = "uid://bm315wwujblwc"

[node name="WipEnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_f2tsk")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://b023dqmvy1wyg"

[node name="Idle" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("3_sv2x5")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="Alerted" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("4_gbuk4")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="Step" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("5_f2tsk")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="Decide" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("6_kp0d4")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="PreAttack" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("7_htmdt")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="Attack1" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("6_3w1av")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="Attack2" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("7_kp0d4")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="PostAttack" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("10_1fnqe")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="Dash" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("8_s18xg")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="Death" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("10_kp0d4")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="Fall" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("11_s18xg")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="Bide" type="Node" parent="WipEnemyStateMachine"]
script = ExtResource("14_ssfqn")
metadata/_custom_type_script = "uid://bcf4v85reopr0"

[node name="AttackCooldownTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("PortableCompressedTexture2D_ssfqn")
offset = Vector2(0, -16)
hframes = 3
vframes = 2
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"convert_fps_field": 60.0,
"convert_ms_field": 16.0,
"convert_to_fps": false,
"embed_tex": true,
"i_mode": 0,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"scale": "1.0",
"slice": "",
"source": "res://scenes/enemies/wip_enemy/wip_enemy.aseprite",
"source_uid": 3217076038792368738
}
metadata/_aseprite_wizard_source_file_hash_ = "5063ead363f3bcfda7bb22a1067c4733"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1fnqe")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kp0d4")

[node name="Hurtbox" parent="." instance=ExtResource("12_037im")]
repetitive_hitbox_damage_cooldown = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_htmdt")

[node name="HurtboxGround" parent="." instance=ExtResource("12_037im")]
repetitive_hitbox_damage_cooldown = 0.1
grounded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxGround"]
shape = SubResource("CircleShape2D_037im")

[node name="HitboxGround" parent="." instance=ExtResource("14_cc55l")]
damage_types = Array[int]([0])
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxGround"]
shape = SubResource("CircleShape2D_ssfqn")

[node name="GroundDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector"]
shape = SubResource("CircleShape2D_kp0d4")

[node name="HealthLabel" type="Label" parent="."]
offset_left = -2.0
offset_top = -42.0
offset_right = 38.0
offset_bottom = -19.0

[connection signal="velocity_computed" from="NavigationAgent2D" to="WipEnemyStateMachine/Step" method="_on_navigation_agent_2d_velocity_computed"]
